--- a/Fractals/index.html
+++ b/Fractals/index.html
@@ -8,6 +8,7 @@
 		<!-- <script src="libraries/p5.sound.js"></script> -->
 		<script src="sketch.js"></script>
 		<script src="fern.js"></script>
+		<script src="dragonCurve.js"></script>
 		<style>
 			body {
 				margin: 0;
